@@ -247,7 +247,9 @@ version 0.002002
 
 =head1 DEPRECATED
 
-This module is deprecated as equivalent behavior is now part of C<Dist::Zilla>
+This module is deprecated as equivalent behavior is now part of C<Dist::Zilla>.
+
+However, this module will keep maintained for anyone who wants this behaviour without upgrading to C<DZil 5>
 
 =head1 SYNOPSIS
 
